# compas-pro-task

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
user_selection/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  user_manager.py  views.py
user_selection/management/commands/: create_users.py
